--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aura-fe",
+  "name": "aura-static-site",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/cd10012/aura-fe.git",
+  "repository": "https://github.com/grandathepanda/aura-static-site.git",
   "author": "cd10012",
   "license": "MIT",
   "devDependencies": {
@@ -23,6 +23,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "graphql": "^0.9.1",
+    "graphql-tag": "^2.4.2",
     "hash-router": "^0.4.0",
     "history": "^4.6.0",
     "image-loader": "^0.0.1",
@@ -32,6 +33,7 @@
     "pngquant": "^1.3.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-apollo": "^1.4.12",
     "react-css-modules": "^4.1.0",
     "react-css-transition-replace": "^2.2.0",
     "react-dom": "^15.4.2",
@@ -39,7 +41,7 @@
     "react-motion": "^0.4.7",
     "react-motion-ui-pack": "^0.10.2",
     "react-particles-js": "^1.5.0",
-    "react-redux": "^5.0.3",
+    "react-redux": "^5.0.6",
     "react-redux-form": "^1.13.0",
     "react-router": "3.0.2",
     "react-router-redux": "^4.0.8",
@@ -53,7 +55,7 @@
     "webpack": "2.1.0-beta.22"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --colors --progress",
+    "start": "webpack-dev-server -d --inline --hot --colors --progress",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
