--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "pngquant": "^1.3.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-apollo": "^1.4.12",
     "react-css-modules": "^4.1.0",
     "react-css-transition-replace": "^2.2.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.6.1",
     "react-dropdown": "^1.2.1",
     "react-motion": "^0.4.7",
     "react-motion-ui-pack": "^0.10.2",
     "react-particles-js": "^1.5.0",
     "react-redux": "^5.0.6",
-    "react-redux-form": "^1.13.0",
+    "react-redux-form": "^1.14.0",
     "react-router": "3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
@@ -50,6 +51,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^5.0.1",
     "sass-resources-loader": "^1.2.0",
+    "shallow-compare": "^1.2.1",
     "thunk": "^0.0.1",
     "thunks": "^4.7.5",
     "webpack": "2.1.0-beta.22"
