--- a/package.json
+++ b/package.json
@@ -6,28 +6,33 @@
   "author": "cd10012",
   "license": "MIT",
   "devDependencies": {
-    "react-scripts": "0.8.5",
-    "style-loader": "^0.13.1"
-  },
-  "dependencies": {
-    "apollo-client": "^0.8.1",
-    "babel": "^6.5.2",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-native": "^1.9.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "dotenv-webpack": "^1.5.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "image-loader": "^0.0.1",
+    "image-webpack-loader": "^3.3.1",
+    "react-scripts": "0.8.5",
+    "sass-resources-loader": "^1.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^3.5.4"
+  },
+  "dependencies": {
+    "apollo-client": "^0.8.1",
     "classnames": "^2.2.5",
     "create-react-app": "^1.0.3",
     "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "dotenv": "^4.0.0",
     "graphql": "^0.9.1",
     "graphql-tag": "^2.4.2",
+    "halogen": "^0.2.0",
     "hash-router": "^0.4.0",
     "history": "^4.6.0",
-    "image-loader": "^0.0.1",
-    "image-webpack-loader": "^3.3.1",
     "imagemin-pngquant": "imagemin/imagemin-pngquant",
     "node-sass": "^4.5.3",
     "pngquant": "^1.3.0",
@@ -44,17 +49,15 @@
     "react-particles-js": "^1.5.0",
     "react-redux": "^5.0.6",
     "react-redux-form": "^1.14.0",
-    "react-router": "3.0.2",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "redux": "^3.6.0",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^5.0.1",
-    "sass-resources-loader": "^1.2.0",
     "shallow-compare": "^1.2.1",
     "thunk": "^0.0.1",
-    "thunks": "^4.7.5",
-    "webpack": "^3.5.4"
+    "thunks": "^4.7.5"
   },
   "scripts": {
     "start": "webpack-dev-server -d --inline --hot --colors --progress",
