--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build
+build*
 build/Release
 
 # Dependency directories
