--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "start": "webpack-dev-server -d --inline --hot --colors --progress",
     "build": "react-scripts build",
     "deploy-dev": "yarn build && aws s3 sync build s3://pibrain.homepage.dev",
-    "deploy-prod": "yarn build && aws s3 sync build s3://pibrain.homepage.prod",
+    "deploy-prod": "yarn build && aws s3 sync build s3://pibrain.io",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
