--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "history": "^4.6.0",
     "imagemin-pngquant": "imagemin/imagemin-pngquant",
     "node-sass": "^4.5.3",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.0.2",
     "pngquant": "^1.3.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
@@ -60,8 +62,11 @@
     "thunks": "^4.7.5"
   },
   "scripts": {
-    "start": "webpack-dev-server -d --inline --hot --colors --progress",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
     "deploy-dev": "NODE_ENV=development yarn build && aws s3 sync build s3://pibrain.homepage.dev",
     "deploy-prod": "NODE_ENV=production yarn build && aws s3 sync build s3://pibrain.io",
     "test": "react-scripts test --env=jsdom",
